- dropped the text_library
- consolidate `standard_error_display` into `handle_querystring_result`
- sketching out some acme-dns support
- add a certbot compatibilty zipfile export for each certificate
- lots of unit tests
- autodetect cryptography modules; fallback onto them instead of openssl if possible
- generic support for non-http01 challenges. they are not triggered, but are tracked.
- add "x-Peter-SSLers"
- removed cert_subject_hash, cert_issuer_hash
-- they were neat, but not very useful and the openssl/bindings showed different info
- Server/CA Certificate fieldname changes to reflect certificate terminology:
	- timestamp_signed > timestamp_not_before
	- timestamp_expires > timestamp_not_after
- ServerCertificate: track private-key requested
- Challenges removed from an AcmeAuthorization will now show a status of "*410*" (gone)
- Deactivating an AcmeAuthorization will update the AcmeChallenges (most likely to "*410*")
- Deactivating an AcmeAuthorization will update the AcmeOrder to "invalid"
- support for LetsEncrypt bugs where an order is "deactivated" not "invalid"

0.4.0
unreleased (2020-01-23)
- implement ACME v2
- removed support for ACME v1
- added `pyproject.yaml`
- Python3 support
	- most file usage moved to context managers
	- subprocess.Popen replaced now wrapped in context manager
	- subprocess.Popen replaced with psutil.Popen, which provides a contextmanger on Python2
- several changes to the database design; please start with a new database
- standardizes newlines for storage
- reorganized code, so Pyramid App is now a sub-package


0.3.0
2019.09.10
- black
- requires pyramid_formencode_classic>=0.4.0
---
- fixed some sql comparisons that compiled oddly in sqlite
- added route: /admin/certificates/active
- added route: /admin/certificates/inactive


0.2.1
2018.07.11
---
- now requiring pyramid_formencode_classic==0.2.2
-- this inherently requires formencode v2.0.0a1
- now requiring pyramid_debugtoolbar>=4.4